# dials

./: .clang-format  .git-blame-ignore-revs  .travis.yml  CHANGELOG.rst  CMakeLists.txt  CONTRIBUTING.md  Jenkinsfile  __init__.py  conftest.py  libtbx_config  libtbx_refresh.py  pyproject.toml
.github/workflows/: build_test.yml
.travis/: prepare_build.sh  prepare_environment.sh  resolve_brew_dependencies.py
algorithms/background/: CMakeLists.txt  modeller.py
algorithms/background/glm/: __init__.py  algorithm.py
algorithms/background/gmodel/: __init__.py  algorithm.py  modeller.py
algorithms/background/median/: __init__.py  algorithm.py
algorithms/background/simple/: __init__.py  algorithm.py
algorithms/background_lookup/: background_and_gain.py  detector_noise.py
algorithms/centroid/: CMakeLists.txt  __init__.py
algorithms/clustering/: observers.py  plots.py  test_observers.py  unit_cell.py
algorithms/filtering/: CMakeLists.txt
algorithms/image/threshold/: CMakeLists.txt  SConscript  local.h
algorithms/image/threshold/boost_python/: local.cc
algorithms/indexing/: CMakeLists.txt  __init__.py  assign_indices.py  bravais_settings.py  compare_orientation_matrices.py  indexer.py  lattice_search.py  lattice_search_strategies.py  model_evaluation.py  nave_parameters.py  nearest_neighbor.py  refinement.py  stills_indexer.py  symmetry.py  test_assign_indices.py  test_compare_orientation_matrices.py  test_index.py  test_lattice_search.py  test_model_evaluation.py  test_non_primitive_basis.py  test_phi_scan.py  test_symmetry.py
algorithms/integration/: CMakeLists.txt  __init__.py  filtering.py  image_integrator.py  integrator.py  integrator_stills.py  kapton_2019_correction.py  kapton_correction.py  overlaps_filter.py  parallel_integrator.py  processor.py  report.py  stills_significance_filter.py  test_processor.py  validation.py
algorithms/integration/bayes/: __init__.py  algorithm.py
algorithms/integration/sum/: __init__.py  algorithm.py
algorithms/merging/: merge.py
algorithms/polygon/: CMakeLists.txt  spatial_interpolation.py
algorithms/polygon/clip/: CMakeLists.txt
algorithms/profile_model/: CMakeLists.txt  factory.py
algorithms/refinement/: CMakeLists.txt  __init__.py  constraints.py  corrgram.py  engine.py  refinement_helpers.py  refiner.py  reflection_manager.py  rotation_decomposition.py  sparse_engine.py  target.py  target_stills.py  two_theta_refiner.py  weighting_strategies.py
algorithms/refinement/analysis/: centroid_analysis.py
algorithms/refinement/outlier_detection/: outlier_base.py  sauter_poon.py  tukey.py
algorithms/refinement/parameterisation/: autoreduce.py  beam_parameters.py  configure.py  crystal_parameters.py  detector_parameters.py  goniometer_parameters.py  model_parameters.py  parameter_report.py  prediction_parameters.py  prediction_parameters_stills.py  scan_varying_beam_parameters.py  scan_varying_crystal_parameters.py  scan_varying_detector_parameters.py  scan_varying_goniometer_parameters.py  scan_varying_model_parameters.py  scan_varying_prediction_parameters.py
algorithms/refinement/prediction/: managed_predictors.py
algorithms/refinement/restraints/: restraints.py  restraints_parameterisation.py
array_family/: CMakeLists.txt  flex.py  flex_ext.py  flex_table.h
cmake/: module_info.json
command_line/: align_crystal.py  analyse_output.py  apply_mask.py  assign_experiment_identifiers.py  augment_spots.py  background.py  check_indexing_symmetry.py  cluster_exec.py  cluster_unit_cell.py  combine_experiments.py  compare_orientation_matrices.py  complete_full_sphere.py  compute_delta_cchalf.py  convert_to_cbf.py  cosym.py  create_profile_model.py  damage_analysis.py  detect_blanks.py  dials_import.py  estimate_gain.py  export.py  export_best.py  export_bitmaps.py  filter_reflections.py  find_bad_pixels.py  find_hot_pixels.py  find_laue_group.py  find_shared_models.py  find_spots.py  find_spots_client.py  find_spots_server.py  frame_orientations.py  generate_distortion_maps.py  generate_mask.py  generate_tutorial_text.py  geometry_viewer.py  goniometer_calibration.py  image_viewer.py  import_stream.py  import_xds.py  (+43 more)
doc/sphinx/: button.py  (+3 more)
extensions/: __init__.py  dispersion_extended_spotfinder_threshold_ext.py  dispersion_spotfinder_threshold_ext.py  gaussian_rs_profile_model_ext.py  glm_background_ext.py  global_spotfinder_threshold_ext.py  gmodel_background_ext.py  helen_spotfinder_threshold_ext.py  median_background_ext.py  null_background_ext.py  simple_background_ext.py  simple_centroid_ext.py
installer/: bootstrap.py  dials_installer.py
newsfragments/: XXX.bugfix  XXX.misc
precommitbx/: installer.py  nagger.py
pychef/: CMakeLists.txt  __init__.py  test_pychef.py
report/: analysis.py  plots.py  test_analysis.py  test_plots.py
test/: SConscript  test_phil.py  test_python3_regression.py  test_scan_varying_integration_bug.py  test_scitbx.py
tests/: CMakeLists.txt
util/: CMakeLists.txt  Resolutionizer.py  __init__.py  _progress.py  add_hash.py  ascii_art.py  banner.py  batch_handling.py  best.py  cluster_map.py  command_line.py  exclude_images.py  export_mmcif.py  export_mtz.py  export_sadabs.py  export_xds_ascii.py  filter_reflections.py  image.py  installer.py  intensity_explorer.py  ioutil.py  log.py  masking.py  missing_reflections.py  mosflm.py  mp.py  multi_dataset_handling.py  nexus_old.py  options.py  phil.py  pprint.py  pycbf_extra.py  rebin_images.py  report.py  resolutionizer.py  scale_down_image.py  show_version.py  slice.py  stream.py  test_slice.py  (+3 more)
util/image_viewer/: mask_frame.py  rstbx_frame.py  spotfinder_frame.py  spotfinder_wrap.py  viewer_tools.py
util/image_viewer/slip_viewer/: calibration_frame.py  example_frame_plugin_hidden.py  frame.py  pyslip.py  ring_frame.py  score_frame.py  slip_viewer_image_factory.py  tile_generation.py  uc_frame.py
util/masking/: __init__.py
util/nexus/: __init__.py  nx_mx.py  nx_reflections.py
util/reciprocal_lattice/: conftest.py  test_render_3d.py  viewer.py
viewer/: CMakeLists.txt  from_flex_to_wxbitmap.py  slice_viewer.py
(+293 files in other folders)
